[tool.poetry]
name = "orquestador-v2"
version = "0.1.0"
description = ""
authors = ["alexhdz1 <alex.hdz.c@ciencias.unam.mx>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
